Add: finished Container & Spacing module

--- a/tailwind-sandbox/04-typography/index.html
+++ b/tailwind-sandbox/04-typography/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts setup -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- custmized font from google fonts and tailwind.config from
+    https://tailwindcss.com/docs/font-family -->
+    <script>
+      tailwind.config = {
+        theme: {
+          fontFamily: {
+            'sans': ['ui-sans-serif', 'system-ui'],
+            'serif': ['ui-serif', 'Georgia'],
+            'mono': ['ui-monospace', 'SFMono-Regular'],
+            // added custmized one here 
+            'sacra': ['Sacramento', 'cursive']
+          }
+        }
+      }
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
+    <!-- Default Ones from tailwind -->
+    <div class="font-sans">Tailwind is awesome</div>
+    <div class="font-serif">Tailwind is awesome</div>
+    <div class="font-mono">Tailwind is awesome</div>
+    <!-- Custmized Ones from Google Fonts -->
+    <div class="font-sacra">Tailwind is awesome</div>
 
     <!-- Font Size -->
 
