--- a/tailwind-sandbox/03-container-spacing/index.html
+++ b/tailwind-sandbox/03-container-spacing/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <!-- Container -->
-    <div>
+    <div class="container mx-auto">
+      <!-- mx = x軸 = 左右, my = y軸 = 上下-->
       <article>
         <h3>Article One</h3>
         <p>
@@ -20,13 +21,43 @@
         </p>
       </article>
 
-      <!-- Margin -->
+      <!-- Margin whole, left, right, top, bottom-->
+      <div class="bg-gray-400 m-2">Hello World</div>
+      <div class="bg-gray-400 ml-4">Hello World</div>
+      <div class="bg-gray-400 mr-4">Hello World</div>
+      <div class="bg-gray-400 mt-4">Hello World</div>
+      <div class="bg-gray-400 mb-4">Hello World</div>
+      <div class="bg-gray-400 mt-[20px]">Hello World</div>
 
       <!-- Padding -->
+      <div class="bg-gray-400 p-2">Hello World</div>
+      <div class="bg-gray-400 pl-4">Hello World</div>
+      <div class="bg-gray-400 pr-4">Hello World</div>
+      <div class="bg-gray-400 pt-4">Hello World</div>
+      <div class="bg-gray-400 pb-4">Hello World</div>
+      <div class="bg-gray-400 pt-[20px]">Hello World</div>
 
       <!-- Space Between X -->
+      <div class="flex mt-24 space-x-4">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
+        <div>Item 5</div>
+        <div>Item 6</div>
+        <div>Item 7</div>
+      </div>
 
       <!-- Space Between Y -->
+      <div class="flex flex-col mt-24 space-y-4">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
+        <div>Item 5</div>
+        <div>Item 6</div>
+        <div>Item 7</div>
+      </div>
     </div>
   </body>
 </html>
