--- a/tailwind-sandbox/06-layout-position/index.html
+++ b/tailwind-sandbox/06-layout-position/index.html
@@ -9,28 +9,79 @@
   </head>
   <body>
     <!-- Positioning -->
+    <div class="relative w-1/2 h-12 bg-red-200">
+      <p>Parent Element</p>
+      <div class="absolute bottom-0 right-0 bg-red-500">
+        <p>Absolute Child</p>
+      </div>
+    </div>
 
     <!-- Top left corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute left-0 top-0 h-16 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Top right corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute right-0 top-0 h-16 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Bottom left corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute left-0 bottom-0 h-16 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Bottom right corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute right-0 bottom-0 h-16 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Span top edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute inset-x-0 h-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Span left edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute inset-y-0 left-0 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Span right edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute inset-y-0 right-0 w-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Span bottom edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <p><div class="absolute inset-x-0 bottom-0 h-16 bg-yellow-300"></div></p>
+    </div>
 
     <!-- Display Classes -->
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      <span class="inline font-bold">This is inline.</span>Tempora
+      voluptatum quisquam 
+      <span class="inline-block font-bold">This is inline-block</span> officia aliquam architecto accusantium adipisci ad? 
+      Eos adipisci porro odit quos accusantium perferendis 
+      <span class="block font-bold">This is block.</span>illo 
+      <span class="hidden font-bold">This is hidden.</span>minus iure perspiciatis aperiam?
+    </div>
+    
 
     <!-- Z-Index -->
+    <div class="relative h-36">
+      <div class="absolute left-10 w-24 h-24 bg-blue-300 z-40">1</div>
+      <div class="absolute w-24 left-20 h-24 bg-blue-400">2</div>
+      <div class="absolute w-24 h-24 left-40 bg-blue-500 z-10">3</div>
+      <div class="absolute w-24 h-24 left-60 bg-blue-600 z-20">4</div>
+      <div class="absolute w-24 h-24 left-80 bg-blue-700 z-30">5</div>
+    </div>
 
     <!-- Floats -->
+    <div class="w-1/2">
+      <img class="h-48 w-48 float-left m-4" src="../assets/img/img1.jpg" alt="" class="src">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit illo dolorum recusandae autem! Reiciendis iste ipsam dolorem, vel in ab obcaecati cum nam illum aliquid, molestias deleniti nulla rerum voluptas.</p>
+    </div>
   </body>
 </html>
 
