--- a/tailwind-sandbox/11-breakpoints/index.html
+++ b/tailwind-sandbox/11-breakpoints/index.html
@@ -8,7 +8,18 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body class="bg-black sm:bg-green-800 md:bg-blue-800 lg:bg-yellow-500 xl:bg-cyan-500 2xl:blue-500">
+    <h1 class="text-white text-4xl"></h1>
+    <script>
+      function showBrowserWidth(){
+        const width = window.innerWidth;
+        document.querySelector('h1').innerText = `Width: ${width}px`;
+      }
+
+      window.onload = showBrowserWidth
+      window.onresize = showBrowserWidth
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
