--- a/tailwind-sandbox/14-grid/index.html
+++ b/tailwind-sandbox/14-grid/index.html
@@ -9,8 +9,25 @@
   </head>
   <body>
     <!-- Grid cols and rows -->
+    <div class="grid md:grid-cols-3"> 
+      <div class="md:col-span-2 row-span-2 p-10 border border-blue-600 bg-blue-100">Item 1</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 2</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 3</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 4</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 5</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 6</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 7</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 8</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 9</div>
+    </div>
 
     <!-- Col and row span -->
+    <div class="grid grid-cols-3"> 
+      <div class="md:col-span-2 p-10 border border-blue-600 bg-blue-100">Item 10</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 11</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 12</div>
+      <div class="p-10 border border-blue-600 bg-blue-100">Item 13</div>
+    </div>
   </body>
 </html>
 
