--- a/tailwind-sandbox/18-dark-mode/index.html
+++ b/tailwind-sandbox/18-dark-mode/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
+<!-- How to add the darkmode class in html -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- how to set up the default mode w/o OS -->
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      }
+    </script>
+    <!-- Adding the function to change color when it's toggled -->
+    <style>
+      .toggle-checkbox:checked {
+        right:0;
+        border-color:#68d391;
+      }
+
+      .toggle-checkbox:checked + .toggle-label {
+        background: #68d391;
+      }
+    </style>
     <title>Dark Mode</title>
+    <!-- How to change Darkmode
+    Mac: system setting-> general -> changing mode
+   -->
   </head>
   <body>
+    <div class="container mx-auto mt-10 bg-white dark:bg-slate-900 rounded-xl px-6 py-8 shadow-xl">
+      <h3 class="text-slate-900 dark:text-white font-medium tracking-tight">
+        Lorem, ipsum dolor sit amet 
+      </h3>
+      <p class="text-slate-500 dark:text-slate-400 mt-2 text-sm">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, vitae ipsa. Veritatis nisi aperiam ratione libero dolores, id eligendi animi? Repellat deleniti vitae aliquam quidem, nisi eum numquam excepturi voluptatum?
+      </p>
+    </div>
+    <div class="relative inline-block w-10 mr-2 ml-6 mt-6 align-middle select-none transition duration-200 ease-in">
+      <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+      <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
+    </div>
+
+    <!--Adding Dynamic Function to Toggle  -->
+    <script>
+      document.getElementById('toggle').addEventListener('change', 
+      function(){
+        if(this.checked){
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })
+    </script>
     <!-- By default, you can have your project use whatever mode your OS is using. You can use "dark:{class}". You can also set your config to use a class instead of using your OS mode -->
   </body>
 </html>
